# smartlike

./: README.md
crates/: Cargo.toml
crates/fediverse-relay/: .gitignore  Cargo.toml  README.md
crates/fediverse-relay/cfg/: fediverse-relay.toml
crates/fediverse-relay/contexts/: https%3A%2F%2Fw3id.org%2Fsecurity%2Fv1.jsonld  https%3A%2F%2Fwww.w3.org%2Fns%2Factivitystreams.jsonld
crates/fediverse-relay/src/: context.rs  main.rs  mastodon.rs  peertube.rs  relay.rs  routes.rs  util.rs
crates/fediverse-relay/templates/: GET_%2Faccounts%2Fpeertube%2Ffollowers.json  GET_%2Faccounts%2Fpeertube%2Ffollowing.json  GET_%2Faccounts%2Fpeertube%2Foutbox%3Fpage%3D1.json  GET_%2Faccounts%2Fpeertube%2Foutbox.json  GET_%2Faccounts%2Fpeertube%2Fplaylists%3Fpage%3D1.json  GET_%2Faccounts%2Fpeertube%2Fplaylists.json  GET_%2Faccounts%2Fpeertube.json  GET_%2Factor.json  GET_%2Fwebfinger%3Dsource%3Fsource%3Dacct%3Apeertube.json  GET_%2Fwebfinger%3Dsource%3Fsource%3Dacct%3Arelay.json  GET_index.html  POST_%2Faccount%2Fpeertube%2Finbox_follow.json  POST_%2mastodon.json  POST_mastodon_accept.json
crates/gateway/: .gitignore  Cargo.toml  README.md
crates/gateway/cfg/: gateway.toml
crates/gateway/src/: main.rs  paypal.rs
crates/telegram-bot/: .gitignore  Cargo.toml  README.md
crates/telegram-bot/cfg/: telegram-bot.toml
crates/telegram-bot/src/: main.rs
crates/vote/: Cargo.toml  README.md
crates/vote/cfg/: vote.toml
crates/vote/src/: main.rs  openexchangerates.rs
crates/vote/test/: openexchangerates.json
embed/js/: .gitignore  README.md  package.json
embed/js/src/: donate.html  login.html  smartlike.html  subscribe.html
embed/js/src/embed.smartlike.org/: modal.html  smartlike.css  smartlike.js
embed/rust/: Cargo.toml  README.md
embed/rust/src/: client.rs  lib.rs
