[package]
name = "smartlike-fediverse-relay"
version = "0.0.1"
authors = ["developers@smartlike.org"]
edition = "2021"

[[bin]]
name = "smartlike-fediverse-relay"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.47"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0.73", features = [ "preserve_order" ] }
indexmap = "=1.6.2"
clap = "~2.33"
toml = "0.5.8"
url = "2.1.0"
actix-web = "3.3.2"
actix-rt = "1.1.1"
reqwest = { version = "0.10", features = ["blocking", "json", "rustls-tls"] }
rocksdb = "0.17.0"
base64 = "0.13.0"
openssl = "0.10.36"
urlencoding = "2.1.0"
log = "0.4.0"
env_logger = "0.9.0"
hex = "0.4.3"
http = "0.2.6"
lru = "0.6.5"
json = "0.12.4"
dashmap = "4.0.0"
fasthash = "0.4"
regex = "1.5.4"
lazy_static = "1.4.0"
ssi = "0.3.0"
json-ld = "0.4"
futures = "0.3"
iref = "^2.0.3"
smartlike-embed-lib = { path = "../../embed/rust" }

[dependencies.chrono]
features = ["serde"]
version = "0.4"
