[package]

name = "smartlike-gateway"
version = "0.0.1"
authors = ["developers@smartlike.org"]
edition = "2018"

[dependencies]
anyhow = "1.0.47"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0.51", features = [ "preserve_order" ] }
clap = "~2.33"
toml = "0.5.8"
url = "2.1.0"
actix-rt = "2.6.0"
actix-web = { version = "4.0.0-beta.19", default-features = false }
actix-cors = "0.6.1"
reqwest = { version = "0.11.10", features = ["blocking", "json", "rustls-tls"] }
tokio-compat-02 = "0.2"

rocksdb = "0.17.0"
uuid = "1.0.0"
smartlike-embed-lib = { path = "../../embed/rust" }
