[package]
name = "smartlike-telegram-bot"
version = "0.0.1"
authors = ["developers@smartlike.org"]
edition = "2021"

[[bin]]
name = "smartlike-telegram-bot"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0.73", features = [ "preserve_order" ] }
clap = "~2.33"
toml = "0.5.8"
rocksdb = "0.17.0"
lru = "0.6.5"
hex = "0.4.3"
json = "0.12.4"
futures = "0.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
async-channel = "1.6.1"
sha2 = "=0.8.1"
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot"}
log = "0.4"
env_logger = "0.9.0"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
smartlike-embed-lib = { path = "../../embed/rust" }

[dependencies.chrono]
features = ["serde"]
version = "0.4"
