[package]

name = "smartlike-embed-lib"
version = "0.0.1"
authors = ["developers@smartlike.org"]
edition = "2018"

[dependencies]
anyhow = "1.0.47"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0.51", features = [ "preserve_order" ] }
hex = "0.4.1"
rand = "0.7"
ed25519-dalek = { version = "=1.0.0-pre.3" }
blake2 = "0.8"
reqwest = { version = "0.11.10", features = ["blocking", "json", "rustls-tls"] }

